--- a/source/_includes/base.html
+++ b/source/_includes/base.html
@@ -6,13 +6,24 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <div class="bigBox">
-      <!-- {% if tags != plant %}
-      {% endif %} -->
-      <a href="/">
-        <h1>recipe book</h1>
-      </a>
+    <div class="sideNav">
+      <ul>
+        <li><a href="/#recipeCont">Recipes</a></li>
+        <li><a href="/">Recommendation</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/contact">Contact</a></li>
+      </ul>
+    </div>
 
+    <header>
+      <div class="homeTitle">
+        <div class="headerTitle">
+          <a href="/">{{ title }}</a>
+        </div>
+      </div>
+    </header>
+
+    <div class="bodyCont">
       {{ content }}
     </div>
   </body>
