ver 0.1.6 (update filtering)

--- a/source/_includes/base.html
+++ b/source/_includes/base.html
@@ -9,7 +9,7 @@
     <div class="sideNav">
       <ul>
         <li><a href="/#recipeCont">Recipes</a></li>
-        <li><a href="/">Recommendation</a></li>
+        <li><a href="/">Recommends</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/contact">Contact</a></li>
       </ul>
