--- a/source/_includes/base.html
+++ b/source/_includes/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>{{ title }}</title>
+    <title>Doggies' Bowl</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
@@ -18,7 +18,7 @@
     <header>
       <div class="homeTitle">
         <div class="headerTitle">
-          <a href="/">{{ title }}</a>
+          <a href="/">Doggies' Bowl</a>
         </div>
       </div>
     </header>
