--- a/source/_includes/recipe.html
+++ b/source/_includes/recipe.html
@@ -5,22 +5,38 @@ layout: base.html
 <link rel="stylesheet" href="/style.css" />
 
 <div class="recipeTopDiv">
-  <div class="recipeTitleBox">
-    {{title}}
-  </div>
+  <div class="recipeTitleBox">{{title}}</div>
   <div class="recipreTotalBox">
     <div class="recipeInfoBox">
-      <div class="recipeTime">{{time}} mins</div>
-      <div class="recipePretime">{{preTime}} mins</div>
-      <div class="recipeWhen">{{when}}</div>
-      <div class="recipeStyle">{{style}}</div>
-      {% for ingredients in ingredients %}
-      <div class="recipeIngri" data-ing="{{ forloop.index0 }}">
-        {{ ingredients }}
+      <div class="recipeInfoHorBox">
+        <div class="recipeDetails">
+          <h1>Cook Time:</h1>
+          <p>{{time}} mins</p>
+        </div>
+        <div class="recipeDetails">
+          <h1>Prepare Time:</h1>
+          <p>{{preTime}} mins</p>
+        </div>
+        <div class="recipeDetails">
+          <h1>When:</h1>
+          <p>At {{when}}</p>
+        </div>
+        <div class="recipeDetails">
+          <h1>Style:</h1>
+          <p>{{style}}</p>
+        </div>
       </div>
-      {% endfor %}
+      <div class="recipeDetails" id="ingredientsDiv">
+        <h1>Ingredients:</h1>
+
+        {% for ingredients in ingredients %}
+        <div class="recipeIngreContents" data-ing="{{ forloop.index0 }}">
+          - {{ ingredients }}
+        </div>
+        {% endfor %}
+      </div>
     </div>
-    <div class="recipreImage">
+    <div class="recipeImage">
       <img src="{{ photo }}" />
     </div>
   </div>
