--- a/source/_includes/base.html
+++ b/source/_includes/base.html
@@ -10,8 +10,8 @@
       <ul>
         <li><a href="/#recipeCont">Recipes</a></li>
         <li><a href="/">Recommends</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/contact">Contact</a></li>
+        <!-- <li><a href="/about">About</a></li>
+        <li><a href="/contact">Contact</a></li> -->
       </ul>
     </div>
 
