--- a/source/style.css
+++ b/source/style.css
@@ -76,14 +76,17 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 2vh;
+  
 }
 
 .homeTitle {
   background-color: var(--bgColor);
   width: fit-content;
-  padding: 1em 2em;
-  border-top-left-radius: var(--edgeRadius);
-  border-top-right-radius: var(--edgeRadius);
+  padding: 1.2em 4em;
+  border-top-left-radius: 2em;
+  border-top-right-radius: 2em;
+  border-bottom: solid 3px black;
 }
 
 .headerTitle {
@@ -103,7 +106,9 @@ header a {
 
 .bodyCont {
   background-color: var(--bgColor);
+  height: fit-content;
   width: 100%;
+  padding-bottom: 20vh;
   /* height: 100vh; */
   border-top-left-radius: var(--edgeRadius);
   border-top-right-radius: var(--edgeRadius);
@@ -188,7 +193,7 @@ section {
 #recipeCont {
   width: var(--centerWidth);
   margin: auto;
-  height: 100vh;
+  height: fit-content;
   scroll-snap-align: start;
   padding-top: 5vh;
 }
@@ -250,6 +255,8 @@ section {
 
 #recipeContGrid {
   background-color: var(--darkColor);
+  height: 70vh;
+  overflow-y: auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2%;
@@ -327,8 +334,6 @@ section {
   width: fit-content;
 }
 .recipreTotalBox {
-  /* height: 50vh; */
-  height: 600px;
   padding: 25px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -341,17 +346,20 @@ section {
 }
 
 .recipeInfoBox {
+  height: 100%;
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 15px;
 }
 .recipeInfoHorBox{
+  height: 100%;
+  width: 100%;
   display: grid;
   grid-template-rows: repeat(4,1fr);
-  gap: 20px;
+  gap: 15px;
 }
 .recipeDetails {
-  background-color: yellow;
   padding: 15px;
   background-color: white;
   border-radius: var(--edgeRadius);
@@ -363,14 +371,17 @@ section {
 } */
 .recipeDetails h1 {
   margin-top: 0;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
   text-align: left;
   font-size: 1.2em;
+  border-bottom: solid 2px black  ;
 }
 .recipeDetails p {
   margin-top: 0px;
   margin-left: 0px;
   text-align: left;
-  font-size: 0.8em;
+  font-size: 1em;
 }
 
 .recipeImage {
@@ -396,7 +407,8 @@ section {
 }
 
 .recipeBody h1 {
-  font-size: 1.5em;
+  font-size: 2em;
+  margin-top: 10vh;
   margin-bottom: 0;
   border-bottom: solid 2px black;
   padding-bottom: 5px;
